# portrait981

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
apps/annotator/: pyproject.toml
apps/annotator/src/annotator/: __init__.py  cli.py  label.py  label_server.py  merge.py  review.py  serve.py
apps/facemoment/: CLAUDE.md  README.md  pyproject.toml
apps/facemoment/core/: CLAUDE.md  README.md  pyproject.toml
apps/facemoment/core/docs/: phase-11-summary.md  problems-and-solutions.md
apps/facemoment/core/tests/: conftest.py  helpers.py  test_api.py  test_face_analyzer.py  test_face_classifier.py  test_face_extractor.py  test_frame_processor.py  test_frame_scorer.py  test_gesture_analyzer.py  test_gesture_extractor.py  test_highlight_fusion.py  test_hsemotion_backend.py  test_integration_process.py  test_moment_detector.py  test_observability.py  test_pathway_monitor.py  test_pathway_pipeline.py  test_pipeline.py  test_pose_analyzer.py  test_pose_extractor.py  test_process.py  test_quality_analyzer.py  test_quality_extractor.py  test_visualize.py
apps/facemoment/extractors/expression/: CLAUDE.md  pyproject.toml
apps/facemoment/extractors/face/: CLAUDE.md  pyproject.toml
apps/facemoment/extractors/face-detect/: CLAUDE.md  pyproject.toml
apps/facemoment/extractors/gesture/: CLAUDE.md  pyproject.toml
apps/facemoment/extractors/pose/: CLAUDE.md  pyproject.toml
apps/facemoment/src/facemoment/: __init__.py  main.py
apps/facemoment/tests/: conftest.py  test_api.py  test_debug_handler.py  test_face_classifier.py  test_frame_scorer.py  test_highlight_fusion.py  test_hsemotion_backend.py  test_observability.py  test_pathway_monitor.py  test_pathway_pipeline.py  test_pipeline_monitor.py  test_quality_analyzer.py  test_visualize.py
apps/momentbank/: pyproject.toml
apps/momentbank/src/momentbank/: __init__.py  bank.py  ingest.py  paths.py  persistence.py  types.py
apps/momentbank/tests/: conftest.py  test_bank.py  test_ingest.py  test_persistence.py
apps/momentscan/: .gitignore  CLAUDE.md  README.md  pyproject.toml
apps/momentscan-plugins/face-baseline/: pyproject.toml
apps/momentscan-plugins/face-baseline/tests/: test_face_baseline_analyzer.py
apps/momentscan-plugins/face-classify/: pyproject.toml
apps/momentscan-plugins/face-classify/tests/: test_face_classifier.py
apps/momentscan-plugins/face-gate/: pyproject.toml
apps/momentscan-plugins/face-gate/tests/: test_face_gate_analyzer.py
apps/momentscan-plugins/face-lighting/: pyproject.toml
apps/momentscan-plugins/face-quality/: pyproject.toml
apps/momentscan-plugins/face-quality/tests/: test_face_quality_analyzer.py
apps/momentscan-plugins/frame-quality/: pyproject.toml
apps/momentscan-plugins/frame-quality/tests/: test_quality_analyzer.py
apps/momentscan-plugins/frame-scoring/: pyproject.toml
apps/momentscan-plugins/frame-scoring/tests/: test_frame_scorer.py
apps/momentscan-plugins/portrait-score/: pyproject.toml
apps/momentscan-plugins/portrait-score/tests/: test_portrait_score.py
apps/momentscan-report/: pyproject.toml
apps/momentscan-report/src/momentscan_report/: __init__.py  collection.py  highlight.py  unified.py
apps/momentscan-report/tests/: test_report.py
apps/momentscan/src/momentscan/: __init__.py  __main__.py  main.py  paths.py  v1.py  v2.py  v2_debug.py  v2_report.py
apps/momentscan/tests/: conftest.py  helpers.py  test_api.py  test_batch_highlight.py  test_catalog_build.py  test_catalog_scoring.py  test_collection_engine.py  test_collection_extract.py  test_collection_pivots.py  test_collection_types.py  test_debug_handler.py  test_face_baseline_analyzer.py  test_face_classifier.py  test_face_gate_analyzer.py  test_face_quality_analyzer.py  test_frame_scorer.py  test_highlight_fusion.py  test_identity_builder.py  test_observability.py  test_paths.py  test_pathway_pipeline.py  test_pipeline_monitor.py  test_portrait_score.py  test_pose_analyzer.py  test_quality_analyzer.py  test_visualize.py
apps/personmemory/: pyproject.toml
apps/personmemory/src/personmemory/: __init__.py  bank.py  cli.py  ingest.py  member.py  memory.py  paths.py  persistence.py  store.py
apps/personmemory/tests/: conftest.py  test_bank.py  test_ingest.py  test_persistence.py
apps/portrait981/: CLAUDE.md  pyproject.toml
apps/portrait981-docs/: mkdocs.yml  pyproject.toml
apps/portrait981-docs/docs/: index.md
apps/portrait981-docs/docs/apps/: momentscan-v2.md  personmemory.md  reportrait.md
apps/portrait981-docs/docs/architecture/: data-architecture.md  how-visualbind.md  how-visualpath.md  overview.md  pipeline-architecture.md  visual-ecosystem-review.md  why-visualbind.md  why-visualpath.md
apps/portrait981-docs/docs/business/: data-moat.md
apps/portrait981-docs/docs/legacy/: architecture.md  momentscan-v1.md  roadmap.md  shared-contracts.md
apps/portrait981-docs/docs/research/: how-visualgrow.md  person-conditioned-distribution.md  projected-crowds.md  vision-face-state-embedding.md  (+2 more)
apps/portrait981-serve/: CLAUDE.md  pyproject.toml
apps/portrait981-serve/tests/: conftest.py  test_config.py  test_routes.py  test_s3.py
apps/portrait981/tests/: conftest.py  test_cli.py  test_integration.py  test_node_pool.py  test_pipeline.py
apps/reportrait/: CLAUDE.md  pyproject.toml
apps/reportrait/tests/: conftest.py  test_cli.py  test_comfy_client.py  test_generator.py  test_workflow.py
libs/visualbind/: README.md  pyproject.toml
libs/visualbind/demos/: demo_pose_expression.py
libs/visualbind/tests/: test_agreement.py  test_analyzer.py  test_collector.py  test_encoder.py  test_evaluator.py  test_pairing.py  test_profile.py  test_selector.py  test_signals.py  test_strategies.py
libs/visualpath/cli/: pyproject.toml
libs/visualpath/core/: CLAUDE.md  README.md  pyproject.toml
libs/visualpath/isolation/: pyproject.toml
libs/visualpath/pathway/: pyproject.toml
libs/vpx/expression/: pyproject.toml
libs/vpx/face/: pyproject.toml
libs/vpx/face-detect/: pyproject.toml
libs/vpx/gesture/: pyproject.toml
libs/vpx/pose/: pyproject.toml
(+742 files in other folders)
