[project]
name = "momentscan-report"
version = "0.1.0"
description = "Interactive HTML report generation for momentscan analysis results"
requires-python = ">=3.10"
dependencies = [
    "momentscan",
    "visualbase",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/momentscan_report"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv.sources]
momentscan = { workspace = true }
visualbase = { workspace = true }
