[project]
name = "momentscan"
version = "0.1.0"
description = "Face moment detection and highlight clip extraction for 981park"
requires-python = ">=3.10"
dependencies = [
    "visualbase",
    "visualpath[isolation]",
    "visualbind",
    "vpx-sdk",
    "momentscan-frame-quality",
    "momentscan-face-classify",
    "momentscan-face-quality",
    "momentscan-face-gate",
    "momentscan-face-baseline",
    "momentscan-frame-scoring",
    "momentscan-portrait-score",
    "momentscan-report",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# === Visualization (score curve export) ===
viz = ["matplotlib>=3.5"]

# === Analyzer packages (each with independent dependencies) ===
# In production, each VenvWorker installs only its sub-package:
#   uv pip install vpx-face-detect   → onnxruntime-gpu
#   uv pip install vpx-face-expression → onnxruntime (CPU) — no conflict!
face-detect = ["vpx-face-detect"]
face-expression = ["vpx-face-expression"]
body-pose = ["vpx-body-pose"]
hand-gesture = ["vpx-hand-gesture"]
portrait-score = ["torch>=2.0", "open-clip-torch>=2.24"]
portrait-caption = ["torch>=2.0", "open-clip-torch>=2.24", "transformers>=4.30,<5"]
face-parse = ["vpx-face-parse[onnx]"]

# === Local development ===
# For running everything in a single environment.
# The workspace root override-dependencies blocks CPU onnxruntime.
local = [
    "momentscan[face-detect,face-expression,body-pose,hand-gesture,portrait-score,portrait-caption,face-parse]",
    "pyzmq>=25.0.0",
    "pyqt6>=6.10.2",
    "supervision>=0.19.0",
    "pathway>=0.8.0",
]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
momentscan = "momentscan.cli:main"

# Register core modules as plugins for visualpath.
# ML analyzers are registered by their sub-packages (vpx-face-detect, etc.)
[project.entry-points."visualpath.modules"]
# All analyzers moved to momentscan-plugins packages:
# face.classify → momentscan-face-classify
# face.quality → momentscan-face-quality
# face.gate → momentscan-face-gate
# face.baseline → momentscan-face-baseline
# frame.quality → momentscan-frame-quality
# frame.scoring → momentscan-frame-scoring
# portrait.score → momentscan-portrait-score

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/momentscan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv.sources]
visualbase = { workspace = true }
visualpath = { workspace = true }
visualpath-isolation = { workspace = true }
visualbind = { workspace = true }
vpx-sdk = { workspace = true }
vpx-face-detect = { workspace = true }
vpx-face-expression = { workspace = true }
vpx-body-pose = { workspace = true }
vpx-hand-gesture = { workspace = true }
vpx-face-parse = { workspace = true }
momentscan-frame-quality = { workspace = true }
momentscan-face-classify = { workspace = true }
momentscan-face-quality = { workspace = true }
momentscan-face-gate = { workspace = true }
momentscan-face-baseline = { workspace = true }
momentscan-frame-scoring = { workspace = true }
momentscan-portrait-score = { workspace = true }
momentscan-report = { workspace = true }
