[project]
name = "momentscan"
version = "0.1.0"
description = "Face moment detection and highlight clip extraction for 981park"
requires-python = ">=3.10"
dependencies = [
    "visualbase",
    "visualpath[isolation]",
    "visualbind",
    "vpx-sdk",
    "momentscan-frame-quality",
    "momentscan-face-quality",
    "momentscan-face-lighting",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# === Analyzer packages (each with independent dependencies) ===
face-detect = ["vpx-face-detect"]
face-expression = ["vpx-face-expression"]
body-pose = ["vpx-body-pose"]
hand-gesture = ["vpx-hand-gesture"]
face-parse = ["vpx-face-parse[onnx]"]

# === Local development ===
local = [
    "momentscan[face-detect,face-expression,body-pose,hand-gesture,face-parse]",
    "pyzmq>=25.0.0",
    "pathway>=0.8.0",
]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
momentscan = "momentscan.cli:main"

[project.entry-points."visualpath.modules"]
# Analyzer plugins registered by their own packages:
# face.quality → momentscan-face-quality
# face.lighting → momentscan-face-lighting
# frame.quality → momentscan-frame-quality

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/momentscan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv.sources]
visualbase = { workspace = true }
visualpath = { workspace = true }
visualpath-isolation = { workspace = true }
visualbind = { workspace = true }
vpx-sdk = { workspace = true }
vpx-face-detect = { workspace = true }
vpx-face-expression = { workspace = true }
vpx-body-pose = { workspace = true }
vpx-hand-gesture = { workspace = true }
vpx-face-parse = { workspace = true }
momentscan-frame-quality = { workspace = true }
momentscan-face-quality = { workspace = true }
momentscan-face-lighting = { workspace = true }
