[project]
name = "personmemory"
version = "0.2.0"
description = "Person memory system for portrait981 — conditional distribution store"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "visualbind",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
personmemory = "personmemory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personmemory"]

[tool.uv.sources]
visualbind = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
