[project]
name = "portrait981-docs"
version = "0.1.0"
description = "Portrait981 documentation site"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
serve = [
    "mkdocs>=1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["docs"]
