[project]
name = "portrait981-docs"
version = "0.1.0"
description = "Portrait981 documentation site"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
serve = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.0",
    "pymdown-extensions>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["docs"]
