[project]
name = "portrait981-serve"
version = "0.1.0"
description = "Serving layer for portrait981 pipeline — REST API + S3 + ComfyUI node pool"
requires-python = ">=3.10"
dependencies = [
    "portrait981",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "httpx>=0.27.0"]

[project.scripts]
p981-serve = "portrait981_serve.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portrait981_serve"]

[tool.uv.sources]
portrait981 = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
