[project]
name = "portrait981"
version = "0.1.0"
description = "Unified orchestrator for the 981park portrait pipeline"
requires-python = ">=3.10"
dependencies = ["momentscan", "personmemory", "reportrait", "rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
p981 = "portrait981.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portrait981"]

[tool.uv.sources]
momentscan = { workspace = true }
personmemory = { workspace = true }
reportrait = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
