[project]
name = "reportrait"
version = "0.1.0"
description = "AI portrait generation bridge for portrait981"
requires-python = ">=3.10"
dependencies = ["momentbank"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
reportrait = "reportrait.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reportrait"]

[tool.uv.sources]
momentbank = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
