[project]
name = "visualbind"
version = "0.1.0"
description = "Multi-observer signal binding framework via weak supervision"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visualbind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
