[project]
name = "momentscan-face-baseline"
version = "0.1.0"
description = "Per-face identity baseline profiling (Welford online stats)"
requires-python = ">=3.10"
dependencies = [
    "vpx-sdk",
]

[project.entry-points."visualpath.modules"]
"face.baseline" = "momentscan.face_baseline:FaceBaselineAnalyzer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/momentscan"]

[tool.uv.sources]
vpx-sdk = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
