[project]
name = "momentscan-face-classify"
version = "0.1.0"
description = "Face role classifier (main/passenger/transient/noise)"
requires-python = ">=3.10"
dependencies = [
    "vpx-sdk",
    "vpx-face-detect",
]

[project.entry-points."visualpath.modules"]
"face.classify" = "momentscan.face_classify:FaceClassifierAnalyzer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/momentscan"]

[tool.uv.sources]
vpx-sdk = { workspace = true }
vpx-face-detect = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
