[project]
name = "momentscan-face-gate"
version = "0.1.0"
description = "Per-face quality gate (confidence, blur, exposure, parsing)"
requires-python = ">=3.10"
dependencies = [
    "vpx-sdk",
]

[project.entry-points."visualpath.modules"]
"face.gate" = "momentscan.face_gate:FaceGateAnalyzer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/momentscan"]

[tool.uv.sources]
vpx-sdk = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
