[project]
name = "momentscan-face-lighting"
version = "0.1.0"
description = "Portrait lighting pattern analysis"
requires-python = ">=3.10"
dependencies = ["vpx-sdk", "numpy>=1.24", "opencv-python>=4.8", "torch>=2.0"]

[project.entry-points."visualpath.modules"]
"face.lighting" = "momentscan.face_lighting:FaceLightingAnalyzer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/momentscan"]

[tool.uv.sources]
vpx-sdk = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
