[project]
name = "momentscan-frame-quality"
version = "0.1.0"
description = "Frame-level quality analyzer (blur, brightness, contrast)"
requires-python = ">=3.10"
dependencies = [
    "vpx-sdk",
    "opencv-python>=4.0",
]

[project.entry-points."visualpath.modules"]
"frame.quality" = "momentscan.frame_quality:QualityAnalyzer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/momentscan"]

[tool.uv.sources]
vpx-sdk = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
