[project]
name = "momentscan-frame-scoring"
version = "0.1.0"
description = "Frame scoring analyzer (technical + action + identity)"
requires-python = ">=3.10"
dependencies = [
    "vpx-sdk",
]

[project.entry-points."visualpath.modules"]
"frame.scoring" = "momentscan.frame_scoring:FrameScoringAnalyzer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/momentscan"]

[tool.uv.sources]
vpx-sdk = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
