[project]
name = "visualpath-cli"
version = "0.1.0"
description = "CLI and configuration for visualpath"
requires-python = ">=3.10"
dependencies = [
    "visualpath[isolation]",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pytest>=7.0.0",
]

[project.scripts]
visualpath = "visualpath.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visualpath"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"

[tool.uv.sources]
visualpath = { workspace = true }
visualpath-isolation = { workspace = true }
