[project]
name = "visualpath"
dynamic = ["version"]
description = "Video analysis pipeline platform for plugin-based extractors"
requires-python = ">=3.10"
dependencies = [
    "visualbase",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Development
dev = [
    "pytest>=7.0.0",
]

# Worker isolation (install visualpath-isolation separately)
isolation = [
    "visualpath-isolation",
]

# CLI tool (install visualpath-cli separately)
cli = [
    "visualpath-cli",
]

# Pathway streaming backend (install visualpath-pathway separately)
pathway = [
    "visualpath-pathway",
]

# All optional dependencies
all = [
    "visualpath-isolation",
    "visualpath-cli",
    "visualpath-pathway",
]

[project.entry-points."visualpath.extractors"]
# Test dummy extractor for integration tests
dummy = "visualpath.core.extractor:DummyExtractor"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = "../../.."

[tool.hatch.build.hooks.vcs]
version-file = "src/visualpath/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/visualpath"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"
markers = [
    "integration: marks tests as integration tests (require VISUALPATH_INTEGRATION_TESTS=1)",
]

[tool.uv.sources]
visualbase = { workspace = true }
visualpath-isolation = { workspace = true }
visualpath-cli = { workspace = true }
visualpath-pathway = { workspace = true }
