[project]
name = "visualpath-isolation"
version = "0.1.0"
description = "Worker isolation, IPC, and observability for visualpath"
requires-python = ">=3.10"
dependencies = [
    "visualpath",
    "numpy>=1.24.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
zmq = [
    "pyzmq>=25.0.0",
    "opencv-python>=4.5.0",
]

[project.scripts]
visualpath-worker = "visualpath.process.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visualpath"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"

[tool.uv.sources]
visualpath = { workspace = true }
