[project]
name = "visualpath-pathway"
version = "0.1.0"
description = "Pathway streaming backend for visualpath"
requires-python = ">=3.10"
dependencies = [
    "visualpath[isolation]",
    "pathway>=0.8.0",
    "pytest>=7.0.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visualpath"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"

[tool.uv.sources]
visualpath = { workspace = true }
visualpath-isolation = { workspace = true }
