[project]
name = "vpx-expression"
version = "0.1.0"
description = "Expression analysis extractor (HSEmotion)"
requires-python = ">=3.10"
dependencies = [
    "visualpath-extractors-base",
    "hsemotion-onnx>=0.3",
]

[project.entry-points."visualpath.extractors"]
expression = "vpx.expression:ExpressionExtractor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vpx"]

[tool.uv.sources]
visualpath-extractors-base = { workspace = true }
