[project]
name = "vpx-expression"
version = "0.1.0"
description = "Expression analysis analyzer (HSEmotion)"
requires-python = ">=3.10"
dependencies = [
    "visualpath-analyzers-base",
    "vpx-face-detect",
    "hsemotion-onnx>=0.3",
]

[project.entry-points."visualpath.analyzers"]
"face.expression" = "vpx.expression:ExpressionAnalyzer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vpx"]

[tool.uv.sources]
visualpath-analyzers-base = { workspace = true }
vpx-face-detect = { workspace = true }
