[project]
name = "vpx-face-detect"
version = "0.1.0"
description = "Face detection extractor (InsightFace SCRFD)"
requires-python = ">=3.10"
dependencies = [
    "visualpath-extractors-base",
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.16.0",
    "ml-dtypes>=0.5.0",
]

[project.entry-points."visualpath.extractors"]
face_detect = "vpx.face_detect:FaceDetectionExtractor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vpx"]

[tool.uv.sources]
visualpath-extractors-base = { workspace = true }
