[project]
name = "vpx-face-detect"
version = "0.1.0"
description = "Face detection analyzer (InsightFace SCRFD)"
requires-python = ">=3.10"
dependencies = [
    "visualpath-analyzers-base",
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.16.0",
    "ml-dtypes>=0.5.0",
]

[project.entry-points."visualpath.analyzers"]
face_detect = "vpx.face_detect:FaceDetectionAnalyzer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vpx"]

[tool.uv.sources]
visualpath-analyzers-base = { workspace = true }
