[project]
name = "vpx-gesture"
version = "0.1.0"
description = "Gesture detection extractor (MediaPipe Hands)"
requires-python = ">=3.10"
dependencies = [
    "visualpath-extractors-base",
    "mediapipe>=0.10.32",
]

[project.entry-points."visualpath.extractors"]
gesture = "vpx.gesture:GestureExtractor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vpx"]

[tool.uv.sources]
visualpath-extractors-base = { workspace = true }
