[project]
name = "vpx-gesture"
version = "0.1.0"
description = "Gesture detection analyzer (MediaPipe Hands)"
requires-python = ">=3.10"
dependencies = [
    "visualpath-analyzers-base",
    "mediapipe>=0.10.32",
]

[project.entry-points."visualpath.analyzers"]
"hand.gesture" = "vpx.gesture:GestureAnalyzer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vpx"]

[tool.uv.sources]
visualpath-analyzers-base = { workspace = true }
