[project]
name = "vpx-pose"
version = "0.1.0"
description = "Pose estimation extractor (YOLO-Pose)"
requires-python = ">=3.10"
dependencies = [
    "visualpath-extractors-base",
    "ultralytics>=8.0.0",
]

[project.entry-points."visualpath.extractors"]
pose = "vpx.pose:PoseExtractor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vpx"]

[tool.uv.sources]
visualpath-extractors-base = { workspace = true }
