[project]
name = "vpx-pose"
version = "0.1.0"
description = "Pose estimation analyzer (YOLO-Pose)"
requires-python = ">=3.10"
dependencies = [
    "visualpath-analyzers-base",
    "ultralytics>=8.0.0",
]

[project.entry-points."visualpath.analyzers"]
"body.pose" = "vpx.pose:PoseAnalyzer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vpx"]

[tool.uv.sources]
visualpath-analyzers-base = { workspace = true }
